# codeflow-pwa

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  HANDOVER-20260403.md  HANDOVER-20260408.md  HANDOVER-20260409.md  HANDOVER-20260410b.md  LICENSE  NOTIFY-20260327-TASK-20260327-007-OPS01-to-PM01.md  QA-REPORT-TEST009-QA01-to-PM01.md  README.en.md  README.md  README.zh.md  TASK-20260319-ID004-DEV01-to-PM01.md  TASK-20260319-ID004-PM01-to-DEV01.md  TASK-20260319-ID006-PM01-to-OPS01.md  _check_nginx.py  _deploy_pwa.py  _deploy_pwa_direct.py  _deploy_relay.py  _fix_relay.py  _scan_cursor_db.py  config.js  demo-content.json  index.html  manifest.json  pyproject.toml  sw.js
.cursor/rules/: admin-human-bridge.en.mdc  bridgeflow-project.en.mdc  bridgeflow-project.mdc  codeflow-project.en.mdc  codeflow-project.mdc  dev-bridge.en.mdc  dev-bridge.mdc  e2e-bridge.en.mdc  e2e-bridge.mdc  ops-bridge.en.mdc  ops-bridge.mdc  pm-bridge.en.mdc  pm-bridge.mdc  qa-bridge.en.mdc  qa-bridge.mdc  qa-team-auto-tester.en.mdc  qa-team-auto-tester.mdc  qa-team-lead.en.mdc  qa-team-lead.mdc  qa-team-perf-tester.en.mdc  qa-team-perf-tester.mdc  qa-team-tester.en.mdc  qa-team-tester.mdc
.fcop/proposals/: 20260421-171851.md
.github/workflows/: deploy-pwa.yml  release-desktop.yml
bridgeflow-nudger/: build.spec  config.py  cursor_vision.py  keybindings-example.json  main.py  nudger.py  web_panel.py
bridgeflow-nudger/panel/: index.html
bridgeflow-plugin/: README.md  mcp.json  requirements.txt
bridgeflow-plugin/.cursor-plugin/: plugin.json
bridgeflow-plugin/commands/: init-team.md  switch-team.md
bridgeflow-plugin/hooks/: hooks.json
bridgeflow-plugin/rules/: bridgeflow-core.mdc  bridgeflow-patrol.mdc
bridgeflow-plugin/scripts/: mcp_server.py  on_file_edit.py
codeflow-desktop/: BUILD.md  _add_nogit_tip.py  _bump_version.py  _debug_tab.py  _fix_blank_lines.py  _fix_download_btn.py  _fix_download_err.py  _fix_encoding.py  _fix_nogit_ui.py  _fix_script_tag.py  _release_notes.md  _show_report.py  _test_click.py  _test_role.py  _test_switch.py  _test_uia.py  build.spec  check_build.py  check_exe.py  check_exe2.py  check_html.py  config.py  cursor_acp.py  cursor_agents_uia.py  cursor_cdp.py  cursor_embed.py  cursor_vision.py  diagnose_ocr.py  main.py  nudger.py  pack.cmd  pack_log.txt  release.cmd  release.py  require_app_ico.py  requirements.txt  snap_click.py  test_hook.py  updater.py  web_panel.py  (+1 more)
codeflow-desktop/build_snap/: snap_click.spec
codeflow-desktop/cursor-extension/: README.md  extension.js  package.json
codeflow-desktop/panel/: index.html
codeflow-desktop/scripts/: split-codeflow-layout.ps1
codeflow-plugin/: README.md  mcp.json  pyproject.toml  requirements-codeflow-mcp.txt  requirements.txt
codeflow-plugin/.cursor-plugin/: plugin.json
codeflow-plugin/commands/: switch-team.md
codeflow-plugin/scripts/: codeflow_mcp.py  install-fcop.ps1  install-fcop.sh  mcp_server.py
codeflow-plugin/src/codeflow_mcp/: __init__.py  server.py
codeflow-plugin/src/codeflow_mcp/_data/: codeflow-core.mdc
codeflow-plugin/src/fcop/: __init__.py  server.py
codeflow-plugin/src/fcop/_data/: fcop-protocol.mdc  fcop-rules.mdc  letter-to-admin.en.md  letter-to-admin.zh.md
codeflow-plugin/src/fcop/_data/teams/: README.en.md  README.md  index.json
codeflow-plugin/src/fcop/_data/teams/dev-team/: README.en.md  README.md  TEAM-OPERATING-RULES.en.md  TEAM-OPERATING-RULES.md  TEAM-ROLES.en.md  TEAM-ROLES.md
codeflow-plugin/src/fcop/_data/teams/dev-team/roles/: DEV.en.md  DEV.md  OPS.en.md  OPS.md  PM.en.md  PM.md  QA.en.md  QA.md
codeflow-plugin/src/fcop/_data/teams/media-team/: README.en.md  README.md  TEAM-OPERATING-RULES.en.md  TEAM-OPERATING-RULES.md  TEAM-ROLES.en.md  TEAM-ROLES.md
codeflow-plugin/src/fcop/_data/teams/media-team/roles/: COLLECTOR.en.md  COLLECTOR.md  EDITOR.en.md  EDITOR.md  PUBLISHER.en.md  PUBLISHER.md  WRITER.en.md  WRITER.md
codeflow-plugin/src/fcop/_data/teams/mvp-team/: README.en.md  README.md  TEAM-OPERATING-RULES.en.md  TEAM-OPERATING-RULES.md  TEAM-ROLES.en.md  TEAM-ROLES.md
codeflow-plugin/src/fcop/_data/teams/mvp-team/roles/: BUILDER.en.md  BUILDER.md  DESIGNER.en.md  DESIGNER.md  MARKETER.en.md  MARKETER.md  RESEARCHER.en.md  RESEARCHER.md
codeflow-plugin/src/fcop/_data/teams/qa-team/: README.en.md  README.md  TEAM-OPERATING-RULES.en.md  TEAM-OPERATING-RULES.md  TEAM-ROLES.en.md  TEAM-ROLES.md
codeflow-plugin/src/fcop/_data/teams/qa-team/roles/: AUTO-TESTER.en.md  AUTO-TESTER.md  LEAD-QA.en.md  LEAD-QA.md  PERF-TESTER.en.md  PERF-TESTER.md  TESTER.en.md  TESTER.md
codeflow-shell/: .env.example  .gitignore  README.md  package.json
codeflow-shell/src/: config.ts  main.ts  sdk-factory.ts
design-system/bridgeflow/: MASTER.md
design-system/codeflow/: MASTER.md
docs/: BridgeFlow-PC执行机落地说明.md  PyPI发布说明.md  config-reference.en.md  config-reference.md  cursor-shortcuts-scope.en.md  cursor-shortcuts-scope.md  github-actions-codeflow-pwa.en.md  github-actions-codeflow-pwa.md  github-repo-about.en.md  github-repo-about.md  message-protocol.en.md  message-protocol.md  nudger-shoulder-tap.en.md  nudger-shoulder-tap.md  release-process.en.md  release-process.md  repo-collaboration.en.md  repo-collaboration.md  user-manual.en.md  user-manual.md  产品设计说明.md  公网部署说明.md  用户操作手册.md  联调启动说明.md  配置参考.md
docs/agents/: ADMIN-01.en.md  ADMIN-01.md  CURRENT-ROLES.md  DEV-01.en.md  DEV-01.md  E2E-01.md  OPS-01.en.md  OPS-01.md  PM-01.en.md  PM-01.md  QA-01.en.md  QA-01.md  README.en.md  README.md  codeflow.json
docs/design/: codeflow-v2-on-fcop-sdk.md  v0.2-sprint0-roadmap.md
docs/essays/: fcop-position.md
docs/integrations/: fcop-standalone-zh.md
docs/promotion/: cursor-forum.md  hackernews-show.md  index.html  producthunt-draft.md  reddit-chatgptpro.md  reddit-cursor.md  reddit-sideproject.md  v2ex-post.md
fcop/internal/: emergence-log.md
fcop/tasks/: REPORT-20260511-003-PM-to-ADMIN.md  REPORT-20260511-015-OPS-to-PM.md
promotion/: index.html
scripts/: deploy_public_relay.py  rename_protocol_to_fcop.py  一键安装启动.bat  一键安装启动.sh
server/relay/: server.py
(+194 files in other folders)
