[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bridgeflow"
version = "0.2.0"
description = "BridgeFlow — 手机主控 + PC 执行机 + 文件协议的多 AI 角色人机协作桥接工具"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "joinwell52-AI" }
]
keywords = ["ai", "agent", "cursor", "pwa", "bridgeflow", "workflow", "human-in-the-loop"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Communications",
  "Operating System :: OS Independent"
]
dependencies = [
  "websockets>=12,<16",
  "segno>=1.5"
]

[project.urls]
Homepage       = "https://joinwell52-ai.github.io/BridgeFlow/"
Repository     = "https://github.com/joinwell52-ai/BridgeFlow"
Documentation  = "https://github.com/joinwell52-ai/BridgeFlow/tree/main/docs"
Changelog      = "https://github.com/joinwell52-ai/BridgeFlow/blob/main/CHANGELOG.md"
"Bug Tracker"  = "https://github.com/joinwell52-ai/BridgeFlow/issues"
"PWA"          = "https://joinwell52-ai.github.io/bridgeflow-pwa/"

[project.scripts]
bridgeflow = "bridgeflow.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bridgeflow = ["data/*.json", "data/rules/*.mdc", "dashboard/*.html"]
